--- a/index.html
+++ b/index.html
@@ -1,1 +1,170 @@
-Hello World SOURAV K C DevOps Engineer
+### Hi there 👋
+
+**Email : souravkc5557@gmail.com**
+
+Experience as a DevOps engineer and configuration management. 
+
+Experience with Linux/Unix Environments and Scripting for Build & Release automation. 
+
+Hands-on experience with version control tools like GIT, GitHub, and BitBucket. 
+
+Experience on GIT- Created branches, tagging, setting externals, and providing access permissions to the developers over branches. 
+
+Good Working Knowledge of Terraform.  
+
+Hands-on Experience in the Containerization Tool Docker. 
+
+Good Experience in Docker like Installing, and creating from Docker File to Docker Images and Docker containers. 
+
+Valuable experience in writing the Ansible playbooks as per the requirement 
+
+Having good Experience with container-based deployments using Docker, working with Docker Files, Docker images, Docker Containers, Docker Network & volumes, Docker Hub, 
+
+Experience in setting up Kubernetes platform on both Cloud & On-premises. 
+
+Good Working knowledge of building scripts like shell. 
+
+Hands-on Experience with Build Tool ANT, and Maven to generate project Artifacts. 
+
+Experience in using Nexus Repository Manager for Maven Builds. 
+
+Expertise in building tools like MAVEN for building deployable artifacts such as war from source code. 
+
+Experience in integrating Unit Tests and Code Quality Analysis Tools like SonarQube 
+
+Administration and creation of Individual Jenkins jobs, including automatic generation, reporting, and alerting of build failures and build status indicators 
+
+Extensively worked with automation tools like Jenkins to Implement the end-to-end automation 
+
+Responsible for Creating and maintaining builds and Administrating Jenkins and Involved in Deployment 
+
+Configured Continuous Integration (CI) tools Jenkins from scratch. Installed Jenkins custom Plugins, and handled administration, backup, and migration activities. 
+
+Experience in AWS services like EC2, VPC, S3, AMI, EBS, ELB, Cloudwatch, RDS, and IAM services. 
+
+Extensive Experience Implementing a Continuous Delivery framework using GitHub, Jenkins, Maven, Nexus, Tomcat, and Kubernetes environments. 
+
+Valuable experience in Configuring and troubleshooting Docker containers, K8s pods, deployments, replica sets, services, volumes, config maps, and worker nodes 
+
+Ability to accept challenges, learn and grow in a reliable professional manner. 
+
+
+
+***Skills:***
+
+**OS:** Windows, Linux (Ubuntu) and macOS
+
+**Languages**: Python, R, c/c++, SQL, HTML5, CSS3.
+
+**Framework:** TensorFlow, OpenCV
+
+**Database:** MySQL
+
+**Basics:** MongoDB, AWS EC2, Microsoft SSIS, Azure ML Studio, R Studio, Power BI
+
+**IDE:** Eclipse, Visual studio code, PyCharm, Jupyter, Spyder, Atom, Sublime text
+
+**DevOps tools:** AWS EC2, VPC, S3, CLOUDWATCH, EKS, CLOUDFORMATION, DOCKER, ANSIBLE, TERRAFORM, JENKINS, K8s, IAM, EBS, ELB, TOMCAT, MAVEN, NEXUS, GRAFANA, SONARQUBE
+
+
+***Qualification***
+
+***ME (Big Data & Data Analytics) – School of Information Sciences, Manipal – 2019***
+
+***BE (CS&E) – Adichunchanagiri Institute of Technology, Chikkamagaluru – 2016***
+
+
+***PROFESSIONAL EXPERIENCE:***
+       ***Worked as “Software Engineer” in Infinite Computer Solutions, Bengaluru from May 2020 to Till date***
+          ***Roles and Responsibilities:***
+                 Designed and managed public/private cloud infrastructures using Amazon Web Services (AWS) which
+                include VPC, EC2, S3, Cloud Front, Elastic File System, RDS, Direct Connect, Route53, Cloud Watch,
+                Cloud Trail, Cloud Formation, and IAM which allowed automated operations.
+                 Implemented AWS solutions using EC2, S3, RDS, Dynamo DB, Route53, EBS, Elastic Load Balancer and
+                Auto scaling groups.
+                 Developing Terraform files and modules to provision and update the infrastructure and platform.
+                 Code versioning and release management with GitHub branching and tagging.
+                 Creating new Repositories and Jenkins files for Continuous integration, build, and Continuous deployment
+                 Installing Plugins in Jenkins as per project requirements and Configuring Slaves in Jenkins.
+                 Assisted in building scripts in Jenkins tool using Maven Build tools and deployed them into Docker containers.
+                 Installed and administered Docker and worked with Docker for convenient environment setup for
+                development and testing
+                 Configuring Docker containers and creating Docker files for different environments.
+                 Created Docker images using Docker files to support the Containerization of applications.
+                 Responsible for writing Docker files and pushing the Docker image to the private repository
+                 Participated in Bug review meetings and released the builds to pre-production and production servers.
+                 Utilized Kubernetes for the runtime environment of the CI/CD system to build, test deploy. Troubleshooting and resolving the application unavailability issues and providing RCA
+                 Used Ansible as a Configuration management and deployment tool, to automate repetitive tasks,
+                quickly deploy critical applications, and proactively manage the changes
+
+      
+       ***Worked as “Software Engineer” at KPIT Technology, Bengaluru from July 2019 to May 2020.***
+            ***Roles and Responsibilities:***
+                     Attending Daily standups and weekly status calls and sending task updates to the Lead/manager
+                     Procuring and configuring the server as per the needs of the release and the application
+                     Implemented AWS solutions using EC2, S3, EBS, ELB, EKS, Route53, Auto scaling groups
+                     Worked with Jenkins pipelines to drive all microservices builds out to the Docker registry and then
+                    deployed to Kubernetes and troubleshooting & resolving the failures
+                     Creating and merging GIT repositories and experience in different operations such as Git ADD,
+                    COMMIT, FETCH, PUSH, REVERT, etc...
+                     Developed and implemented Software Release Management strategies for various applications
+                    according to the Agile methodologies
+                     Configured ELB with different launch configurations using AMI and EC2 Auto scaling groups
+                     Creating S3 buckets and S3 life cycle policies and bucket policies (Read/Write)
+                     Creating EBS Volumes and snapshots and attaching them to the EC2 instances
+                     Configuring and troubleshooting on Kubernetes cluster, worker node issues, and pods issues.
+                     Manual installation and configuration of Apache Tomcat Application Server.
+                     Creating Ansible Playbooks for Configuration and deployments and automating tasks
+                     Configuring and troubleshooting network configuration in Linux machines
+                     Good interaction with developers, managers, and team members to coordinate job tasks and
+                    strong commitment to work.
+                     Used Ansible Playbooks to set up Continuous Delivery Pipeline. Deployed microservices,
+                    including provisioning AWS environments using Ansible Playbooks.
+                     Maintaining source code repository for all major and minor releases.
+                     Kept track of all releases & requests of the developers by maintaining release folders and calendar
+                     Configured Git to inform all the teams about the latest changes happening on it to avoid conflicts due to
+                    the push-before-pull issue. Participated in Branching and Merging using GIT. Maintaining Maven
+                    Pom.xml and properties files.
+                     Integrated SonarQube with Jenkins for continuous inspection of code quality and analysis with
+                    SonarQube.
+                    
+      *** Worked as “Software Engineer Trainee” in KPIT Technology, Bengaluru from May 2018 to May 2019.***
+          ***Project 1: Event Identification of neighbor vehicle makes a lane change to Ego-Vehicle Lane (Cut-In)***
+                • Advanced Driver-assistance systems (ADAS) are the systems to help the driver in the driving process for safety and better driving.
+                • Identifying the specific cut-in event on the highway scenario using computer vision.
+                • Detection of Ego-vehicle Lane and its Edge coordinates.
+                • Identifying the vehicle coordinates using You Only Look Once (YOLO) using the COCO dataset.
+                • Validating the Cut-In events by accumulating Lane marks and vehicle coordinates using Python.
+                • Displaying it by a GUI indicator by taking the lane and vehicle coordinates values.
+
+          ***Project 2: Development of VSLAM (Visual Simultaneous Localization and Mapping)***
+                      • Removal of Third-Party Dependencies in ORB_SLAM
+                      • Using only the Monocular SLAM instead of Stereo and RGB images.
+                      • Removal of Eigen Libraries and their dependencies from CMakeLists.
+                      • Preparation of topics on Frame & Map drawer, Viewer, and mono_kitti for white paper VSLAM for AD/ADAS.
+                      • Removal of magic number and count for the frame and map increment
+                      • Created single code for all the defined execution, frame, and map dump.
+
+
+
+
+
+
+
+
+
+
+<!--
+**SouravGowda/SouravGowda** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
+
+Here are some ideas to get you started:
+
+- 🔭 I’m currently working on ...
+- 🌱 I’m currently learning ...
+- 👯 I’m looking to collaborate on ...
+- 🤔 I’m looking for help with ...
+- 💬 Ask me about ...
+- 📫 How to reach me: ...
+- 😄 Pronouns: ...
+- ⚡ Fun fact: ...
+-->
